# openstack-ansible-os_freezer

./: .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
doc/: Makefile
doc/source/: conf.py  configure-freezer.rst  index.rst
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py  index.rst  ocata.rst  unreleased.rst
tasks/: main.yml
templates/: freezer-api.conf.j2
tests/: test.yml
